# chplus-toolchain

./: AGENTS.md  LICENSE  README.md  STATEMENT.md
chplus-lang/: CMakeLists.txt  README.fork.md  README.md  README.mk.md  main.cpp
chplus-lang/ch_Lib/: file.ch  math.ch  readme.file.ch.md  readme.math.ch.md  readme.string.ch.md  string.ch
chplus-lang/examples/: README.md  array_demo.ch  basic_test.ch  basic_test2.ch  calculator.ch  conditions.ch  direct_test.ch  file_basic.ch  file_demo.ch  file_redirect.ch  function_overload.ch  hello.ch  input_test.ch  logic_operators.ch  math_calculator.ch  math_demo.ch  minimal_struct_array.ch  minimal_test.ch  palindrome.ch  palindrome_complete.ch  palindrome_fixed.ch  palindrome_simple.ch  palindrome_simple_solution.ch  palindrome_simple_test.ch  power_test.ch  scope_test.ch  simple_power_test.ch  simple_struct_array.ch  simple_test.ch  simple_type_test.ch  string_basic.ch  string_find_replace.ch  string_index_test.ch  struct_array_test.ch  struct_demo.ch  struct_test.ch  test.txt  type_conversion.ch  unformatted_test.ch
chplus-lang/include/: CHFormatter.h  CodeFormatter.h  asm.h  interpreter.h  lexer.h  parser.h
chplus-lang/src/: CHFormatter.cpp  CodeFormatter.cpp  asm.cpp  interpreter.cpp  lexer.cpp  parser.cpp
cli/: Cargo.toml  build.rs
cli/src/: lock.rs  main.rs  manifest.rs
cli/src/commands/: add.rs  build.rs  check.rs  clean.rs  fmt.rs  lint.rs  mod.rs  new.rs  run.rs  test.rs  version.rs
docs/: macOS教程.md  踩坑.md
